--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,13 +1,29 @@
-<div>
-    <h1>
-        Home
-    </h1>
-    <h2>
-        Lista de Productos
-    </h2>
-    <ul>
-        {{#each products}}
-            <li> {{this.title}} - {{this.price}} </li>
-        {{/each}}
-    </ul>
-</div>
+<h1>Productos</h1>
+
+<ul>
+    {{#each products}}
+        <li>
+            <a href="/products/{{this._id}}">{{this.title}}</a> - ${{this.price}}
+            <button onclick="addToCart('{{this._id}}')">Agregar al carrito</button>
+        </li>
+    {{/each}}
+</ul>
+
+<nav>
+    {{#if hasPrevPage}}
+        <a href="{{prevLink}}">Página Anterior</a>
+    {{/if}}
+    <span>Página {{page}} de {{totalPages}}</span>
+    {{#if hasNextPage}}
+        <a href="{{nextLink}}">Página Siguiente</a>
+    {{/if}}
+</nav>
+
+<script>
+function addToCart(productId) {
+    fetch(`/api/carts/ID_DEL_CARRITO/product/${productId}`, { method: "POST" })
+        .then(response => response.json())
+        .then(data => alert("Producto agregado al carrito"))
+        .catch(error => console.error("Error:", error));
+}
+</script>
